--- a/style.css
+++ b/style.css
@@ -81,7 +81,9 @@ nav ul li a:hover {
     margin-top: 20px;
 
 }
-
+.first, .second, .third, .fourth{
+        scroll-margin-top: 140px;
+}
 .leftsection {
     font-size: 4rem;
 }
